first three modules

--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h1>Angular</h1>
-<courses></courses>
+<app-zippy title="Shipping Details"> Shipping Details Content </app-zippy>
+<app-zippy title="Billing Details"> Billing Details Content </app-zippy>
